--- a/introduction.tex
+++ b/introduction.tex
@@ -4,7 +4,7 @@ Mobile apps frequently demand access to private information. This includes uniqu
 
 Existing platforms provide limited protection against privacy threats. Both the Android and the iOS platforms mediate access to private information via a permission model. Each permission is mapped to a designated resource, and holds per all application behaviors and resource accesses. In Android,  permissions are given or denied at installation time. In iOS, permissions are granted or revoked upon first access to the respective resource. Hence, both platforms cannot disambiguate legitimate from illegitimate usage of a resource once an app is granted the corresponding permission~\cite{HMNRSKZ:ASE13}.
 
-\paragraph{Threat Model} In this paper, we address privacy threats due to authentic (as opposed to malicious) mobile applications. We consider unauthorized release of private information that (almost) unambiguously identifies the user as being illegitimate, and thus a privacy threat. Illegitimate disclosure of private information arises in various use cases, such as social computing, analytics, advertising, cross-application profiling, etc. In these settings, mobile apps frequently perform access to, and release of, private information that is not required for their core business logic, and without user consent~\cite{LJ:SEC13}.
+\paragraph{Threat Model} In this paper, we address privacy threats due to authentic (as opposed to malicious) mobile applications \OC{\cite{EGCCJMS:OSDI10,RCE:CODASPY13}}{}. \OC{Contrary to malware, such applications execute their declared functionality, though they may still expose the user to unnecessary threats by incorporating extraneous behaviors --- neither required by their core business logic nor approved by the user~\cite{LJ:SEC13} --- such as analytics, advertising, cross-application profiling, social computing, etc. We consider unauthorized release of private information that (almost) unambiguously identifies the user as a privacy threat. Henceforth, we dub such threats \emph{illegitimate}.}{} 
 
 While in general there is no bullet-proof solution for privacy enforcement, which can deal with any type of covert channel, implicit flow or proprietary data transformation, and even conservative enforcement approaches can easily be bypassed~\cite{SMBK:SECRYPT13}, there is strong evidence that authentic apps rarely exhibit these challenges. According to a recent study~\cite{HHJSW:CCS11}, and also our empirical data (presented in \secref{experiments}), private information is normally sent to independent third-party servers. Consequently, data items are released in clear form, or at most following well-known encoding/encryption transformations (like Base64 or MD5), to meet the requirement of a standard and general client/server interface. 
 
