--- a/paper.tex
+++ b/paper.tex
@@ -53,7 +53,10 @@
 
 \newcommand\SHORT[1]{#1}
 \newcommand\FULL[1]{}
-\newcommand\added[1]{{\color{blue} #1}}
+\newcommand\OC[1]{{\color{blue} #1}}
+\newcommand\JC[1]{{\color{purple} #1}}
+\newcommand\OCO[2]{{\color{blue} #1}{\color{red} [[ #2 ]]}}
+\newcommand\JCO[2]{{\color{blue} #1}{\color{purple} [[ #2 ]]}}
 %\newcommand\added[1]{#1}
 
 \input{macros}
