--- a/experiments.tex
+++ b/experiments.tex
@@ -133,30 +133,24 @@ The fundamental reason for these imprecisions is to constrain the overhead of Ta
 
 \subsection{H2: Power of Bayesian Analysis}\label{Se:practical}
 
-The second aspect of the evaluation compared between two versions of \Tool, whose sole difference lies in the method used for detecting relevant values: In one configuration (T-BD), relevant values are detected via tag propagation. The other configuration (H-BD) uses the heuristic detailed in \secref{points} of treating all values reachable from sink arguments up to a depth bound of $k$ as relevant, which places more responsibility on Bayesian reasoning. We set $k$ at 3 based on manual review of the data structures flowing into privacy sinks.
+The second aspect of the evaluation compared between two versions of \Tool, whose sole difference lies in the method used for detecting relevant values: In one configuration (T-BD), relevant values are detected via tag propagation. The other configuration (H-BD) uses the heuristic detailed in \secref{points} of treating all values reachable from sink arguments \OC{(either directly or via the heap graph)} up to a depth bound of $k$ as relevant, which places more responsibility on Bayesian reasoning. We set $k$ at 3 based on manual review of the data structures flowing into privacy sinks. In summary, H-BD trades accuracy for overhead reduction. H2 asserts that the tradeoff posed by H-BD is effective. 
 
-\paragraph{Motivation} As a motivation for this experiment, we present in \figref{overhead} overhead measurements that we obtained from a parametric benchmark application that we have created. We have designed the app as a simple loop that flows the device IMEI into a log file, where loop iterations perform intermediate data propagation steps. 
+\OC{\paragraph{Overhead} First, to quantify overhead reduction, we designed a parametric benchmark application, which consists of a simple loop that flows the device IMEI into a log file. Loop iterations perform intermediate data propagation steps. We then performed a series of experiments --- over the range of 1 to 19 propagation steps --- to quantify the relative overhead of tag propagation versus Bayesian analysis. 
 
-The behavior of the app is governed by two user-controlled values: (i) the length $\ell$ of the source/sink data-flow path (which is proportional to the number of loop iterations) and (ii) the number $m$ of values reachable from sink arguments.
-%
-Based on our actual benchmarks, as well as data reported in past studies~\cite{TPFSW:PLDI09}, we defined the ranges $1 \leq \ell \leq 19$ and $1 \leq m \leq 13 = \Sigma_{n=0}^{2} 3^n$. We then ran the parametric app atop a ``hybrid'' configuration of \Tool\ that simultaneously propagates tags and treats all the values flowing into a sink as relevant.
-
-\figref{overhead} organizes the results into stacked columns, each corresponding to a unique value of $\ell$. For each such value, we executed the app 51 times, picking a value from the range $[0,2]$ for $n$ uniformly at random in each of the 51 runs. We then computed the average overhead over the runs, excluding the first (cold) run to remove unrelated initialization costs. The data in \figref{overhead} suggests that tag propagation is more dominant than Bayesian analysis in overall overhead 
-(with a ratio of roughly 2:1), even when the set of relevant values is naively over approximated, which constitutes a strong motivation to investigate the accuracy of the H-BD variant.
+The results, presented in \figref{overhead}, suggest that tag propagation is more dominant than Bayesian analysis in overall overhead 
+(with a ratio of roughly 2:1), even when the set of relevant values is naively over approximated. Discussion of the methodology underlying this experiment is provided in \appendixref{methodology}.}
 
 \begin{figure}
 \includegraphics[width=\columnwidth]{OverheadDiagram.pdf}
 \caption{\label{Fi:overhead}Overhead breakdown into tag propagation (dark grey) and Bayesian analysis at sink (pale grey), where horizontal (X) axis denotes the number of propagation steps and vertical (Y) axis denotes overhead}
 \end{figure}
 
-
-
-\paragraph{Benchmark Apps} The benchmark applications are listed in the first two columns of \tableref{realworld}. To select the apps, ensuring no biases, we applied the following methodology: We started from the 65 Google Play apps not chosen for the training phase. We then excluded 8 apps that do not have permission to access sensitive data and/or perform release operations (i.e., their manifest does not declare sufficient permissions out of {\tt INTERNET}, {\tt READ\_PHONE\_STATE}, {\tt SEND\_SMS}, etc), as well as 3 apps that we did not manage to install properly, resulting in 54 apps that installed successfully and exercise privacy sources and sinks.
+\OC{\paragraph{Accuracy} For accuracy comparison, we considered real-world benchmark applications.} These are listed in the first two columns of \tableref{realworld}. To select the apps, ensuring no biases, we applied the following methodology: We started from the 65 Google Play apps not chosen for the training phase. We then excluded 8 apps that do not have permission to access sensitive data and/or perform release operations (i.e., their manifest does not declare sufficient permissions out of {\tt INTERNET}, {\tt READ\_PHONE\_STATE}, {\tt SEND\_SMS}, etc), as well as 3 apps that we did not manage to install properly, resulting in 54 apps that installed successfully and exercise privacy sources and sinks.
  
 We deployed the apps under the two \Tool\ configurations. Each execution was done from a clean starting state. 
-The third column of \tableref{realworld} denotes whether our exploration of the app was exhaustive. By that we mean exercising all the UI points exposed by the app in a sensible order. Ideally we would do so for all apps. However, (i) some of the apps, and in particular gaming apps, had stability issues, and (ii) certain apps require SMS-validated sign in, which we did not perform. We did, however, create Facebook, Gmail and Dropbox accounts to log into apps that demand such information yet do not ask for SMS validation. We were also careful to execute the exact same crawling scenario under both the T-BD and H-BD configurations. We comment, from our experience, that most data leaks happen when an app launches, and loads ad content, and so for apps for which deep crawling was not possible the results are still largely meaningful. 
+The third column of \tableref{realworld} denotes whether our exploration of the app was exhaustive. By that we mean exercising all the UI points exposed by the app in a sensible order. Ideally we would do so for all apps. However, (i) some of the apps, and in particular gaming apps, had stability issues, and (ii) certain apps require SMS-validated sign in, which we did not perform. We did, however, create Facebook, Gmail and Dropbox accounts to log into apps that demand such information yet do not ask for SMS validation. We were also careful to execute the exact same crawling scenario under both the T-BD and H-BD configurations. We comment, from our experience, that most data leaks happen when an app launches, \OC{and initializes advertising/analytics functionality}, and so for apps for which deep crawling was not possible the results are still largely meaningful. 
  
-\paragraph{Results} The complete results are listed in \tableref{realworldAll}. The last eight columns of \tableref{realworld} summarize the findings by H-BD and T-BD, respectively, at the granularity of privacy items: the device number, Android and device identifiers, and location. 
+The complete results are listed in \tableref{realworldAll}. The last eight columns of \tableref{realworld} summarize the findings by H-BD and T-BD, respectively, at the granularity of privacy items: the device number, Android and device identifiers, and location. 
 %
 %
 The warnings reported by the H-BD configuration are available for review.\footnote{
@@ -289,7 +283,7 @@ $\fbox{sink : arguments}$
 \end{small}
 \end{table*} 
 
-As \tableref{realworld} indicates, and \tableref{realworldAll} affirms more explicitly, the H-BD variant is more effective than the T-BD variant overall. The findings by T-BD are more complete, both in number of illegitimate leaks and in leakage types. This is mainly because of instabilities introduced by the intrusive tag-propagation instrumentation scheme, which we analyze in more detail in \appendixref{completeRes}.
+\paragraph{Discussion} As \tableref{realworld} indicates, and \tableref{realworldAll} affirms more explicitly, the H-BD variant is more effective than the T-BD variant overall. \OC{Runtime overhead is lowered, and at the same time findings by H-BD are more complete, both in number of illegitimate leaks and in leakage types. This is mainly because of (i) the intrusive instrumentation required for tag propagation, which can cause instabilities, and (ii) inability to track tags through native code. (Both are discussed in detail in \appendixref{completeRes}.)}
 At the same time, the loss in accuracy due to heuristic identification of relevant values is negligible, as suggested by the discussion in \secref{points}. H-BD triggers only one false alarm, on {\tt iso7lockscreen},
 which is due to overlap between irrelevant values: extra information on the {\tt Location} object returned by a call to {\tt LocationManager.getLastKnownLocation(...)} and unrelated metadata passed into a {\tt ContextWrapper.startService(...)} request.  Finally, as expected, H-BD does not incur false negatives.
 
