--- a/paper.bib
+++ b/paper.bib
@@ -274,7 +274,7 @@ booktitle = {FASE},
 @inproceedings{YYZGNW:CCS13,
  author = {Z. Yang and M. Yang and Y. Zhang and G. Gu and P. Ning and X. S. Wang},
  title = {AppIntent: analyzing sensitive data transmission in android for privacy leakage detection},
- booktitle = {Proceedings of the 2013 ACM SIGSAC conference on Computer \&\#38; communications security},
+ booktitle = {Proceedings of the 2013 ACM SIGSAC Conference on Computer and Communications Security},
  year = {2013},
  pages = {1043--1054}
 } 
